# DDoSSentinelAgent

./: .gitignore  IMPROVEMENTS.md  QUICK_START_IMPROVEMENTS.md  README.md  ROADMAP.md  claude.md  config.example.yaml  pyproject.toml  requirements.txt
ddos_sentinel/: __init__.py  config.py  errors.py
ddos_sentinel/agent/: __init__.py  sentinel.py
ddos_sentinel/core/: __init__.py  base_agent.py  types.py
ddos_sentinel/data/: __init__.py  features.py  pcap_ingestion.py  simulator.py
ddos_sentinel/detection/: __init__.py  engine.py  signatures.py
ddos_sentinel/dns/: __init__.py  agent.py
ddos_sentinel/mesh/: __init__.py  orchestrator.py
ddos_sentinel/supply_chain/: __init__.py  agent.py
ddos_sentinel/utils/: __init__.py  resilience.py
docs/: INTERNAL_DESIGN.md
notebooks/: mesh_demo.ipynb
scripts/: __init__.py  analyze_pcap.py  benchmark.py  cli.py
tests/: __init__.py  test_agent.py  test_detection.py  test_integration.py  test_mesh.py  test_pcap_ingestion.py  test_simulator.py
